<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#aaaaaa"
android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/linearLayoutThermalPrinterD10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/status_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center_vertical|center_horizontal"
            android:text="Finger Printer Test"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <TextView
        	  android:id="@+id/selected_device"
        	  android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/serial_number"
    		  android:padding="10dp" />
    
    <Button
        android:id="@+id/get_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_reader" />
<!--
    <Button
        android:id="@+id/get_capabilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_capabilities" />

    <Button
        android:id="@+id/capture_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_fingerprint" />

    <Button
        android:id="@+id/stream_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stream_image" />

    <Button
        android:id="@+id/enrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enrollment" />
-->
    <Button
        android:id="@+id/verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification" />
<!--
    <Button
        android:id="@+id/identification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identification" />
-->
    <LinearLayout
        android:id="@+id/linearLayoutFingerPrintPASSFAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PASS"
                android:id="@+id/cmdReturnOK"
                android:layout_gravity="center"
                android:onClick="cmdReturnPASS_Click" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5" >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FAIL"
                android:id="@+id/cmdReturnError"
                android:layout_gravity="center"
                android:onClick="cmdReturnFAIL_Click" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>


</ScrollView>
