<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#aaaaaa"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

<LinearLayout
        android:id="@+id/linearLayoutThermalPrinterD10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/status_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center_vertical|center_horizontal"
            android:text="Thermal Printer D10 Test"
            android:textColor="#FFFFFF" />

    </LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_connect"
            android:visibility="invisible"
            android:text="@string/connect" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_disconnect"
            android:visibility="invisible"
            android:text="@string/disconnect" />

    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Image File Path"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editImagePath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="/data/fec/1.jpg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textImage2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Image File Path2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editImagePath2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="/data/fec/2.jpg" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Thermal Printer D10"
            android:onClick="Thermal_Printer_D10_Test_Click"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/edittext_log"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutThermalPrinterD10PASSFAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PASS"
                android:textAllCaps="false"
                android:id="@+id/cmdReturnOK"
                android:layout_gravity="center"
                android:onClick="cmdReturnPASS_Click" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5" >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FAIL"
                android:textAllCaps="false"
                android:id="@+id/cmdReturnError"
                android:layout_gravity="center"
                android:onClick="cmdReturnFAIL_Click" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
